feat: API Admin Emotion
